--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@ layout: html5
   <article>
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
     <p class="meta"> {{ post.date | date_to_string }} </p>
-    {{ post.content }}
+    {{ post.content | truncatewords: 150 }}
+    <p><a href="{{ post.url }}">Continue reading...</a></p>
+    <p><a href="{{ post.url }}#disqus_thread">View Comments</a></p>
   </article>
 {% endfor %}
 
