--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 layout: html5
 ---
 
-{% for post in site.posts limit:6 %}
+{% for post in site.posts limit:7 %}
   <article>
     <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
     <p class="meta"> {{ post.date | date_to_string }} </p>
     {{ post.content | truncatewords: 150 }}
     <p><a href="{{ post.url }}">Continue reading...</a></p>
-    <p><a href="{{ post.url }}#disqus_thread">View Comments</a></p>
   </article>
+  <hr class="article-divider">
 {% endfor %}
 
 <!--<h1>Archives</h1>-->
